# rsurl

./: .gitignore  README.md
rsurl_dotNET/: .gitignore  rsurl_dotNET.sln
rsurl_dotNET/rsurl_frontend/: App.razor  Dockerfile  Program.cs  _Imports.razor  appsettings.json  rsurl_frontend.csproj
rsurl_dotNET/rsurl_frontend/Data/: WeatherForecast.cs  WeatherForecastService.cs
rsurl_dotNET/rsurl_frontend/Pages/: Error.cshtml  Error.cshtml.cs  FetchData.razor  _Host.cshtml  _Layout.cshtml
rsurl_dotNET/rsurl_frontend/Properties/: launchSettings.json
rsurl_dotNET/rsurl_frontend/Services/: httpClientService.cs  rsurl_auth_services.cs
rsurl_dotNET/rsurl_frontend/Shared/: MainLayout.razor  MainLayout.razor.css  NavMenu.razor
rsurl_dotNET/rsurl_frontend/wwwroot/data/: menu.json
rsurl_dotNET/rsurl_mublazor_frontend/: App.razor  Program.cs  _Imports.razor  appsettings.json  rsurl_mublazor_frontend.csproj
rsurl_dotNET/rsurl_mublazor_frontend/Data/: ApplicationDbContext.cs  WeatherForecast.cs  WeatherForecastService.cs
rsurl_dotNET/rsurl_mublazor_frontend/Pages/: Error.cshtml  Error.cshtml.cs  FetchData.razor  Gensurl.razor  Index.razor  MyURLs.razor  _Host.cshtml  _Layout.cshtml
rsurl_dotNET/rsurl_mublazor_frontend/Properties/: launchSettings.json
rsurl_dotNET/rsurl_mublazor_frontend/Services/: rsurlAPIservice.cs
rsurl_dotNET/rsurl_mublazor_frontend/Shared/: LoginDisplay.razor  MainLayout.razor  NavMenu.razor
rsurl_rust_shortener/: Cargo.toml
rsurl_rust_shortener/src/: analytics.rs  main.rs  repository.rs  shortener.rs
(+5 files in other folders)
