[package]
name = "rsurl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rsurl_shortener_backend"
path = "src/main.rs"

[dependencies]
actix-web = "3"
nanoid = "0.4.0"
url = "2.2.2"
serde = "*"
futures = "0.3"

[dependencies.mongodb]
version = "2.0.2"
default-features = false
features = ["async-std-runtime"]
